Eduprov : 25-08-2021 : Add more navbar links

--- a/arts-course-blogs.html
+++ b/arts-course-blogs.html
@@ -80,13 +80,15 @@
       <div class="line"></div>
     </div>
     <ul class="nav-links">
-      <li class="text-white" style="font-weight: bold;"><a href="https://eduprov.com/">Home</a></li>
-      <li style="font-weight: bold;"><a href="https://eduprov.com/application-form.php">Application Form</a></li>
-      <li style="font-weight: bold;"><a href="#">Contact us</a></li>
+      <li><a href="https://eduprov.com/">Home</a></li>
+      <li><a href="https://eduprov.com/admission-guidance.html">Admission Guidance</a></li>
+      <li><a href="https://eduprov.com/career-counseling.html">Career Counseling</a></li>
+      <li><a href="https://eduprov.com/application-form.php">Application Form</a></li>
+      <li><a href="https://eduprov.com/contact-form.php">Contact Us</a></li>
     </ul>
   </nav>
   <div id="logo">
-    <img src="images/logo-white.png" alt="Edu-logo" />
+    <a href="https://eduprov.com/"><img src="images/logo-white.png" alt="Edu-logo" title="eduprov logo" /></a>
   </div>
 
   <div class="banner">
