--- a/kcet-exam-information.html
+++ b/kcet-exam-information.html
@@ -111,12 +111,12 @@
             <h2  id="tag-font" class="text-black text-center">Eligibility</h2>
           </div>
         <div class="col-md-12">
-            <div class="card m-2 bg-danger"  id="card-left">
+            <div class="card m-2 bg-primary"  id="card-left">
               <label  class="list-of-course-names">Eligible course</label>
                 <label  class="list-of-course-names">B.E / B.Tech</label>
                 <div class="card-body text-white">
                 <label class="mb-2">Perquisites</label>
-                <p class="text-justify text-white" id="paragraph-font">
+                <p class="text-justify text-white" >
                     Students must have passed their class 12th or PUC examination or equivalent and students waiting for their result can also apply for KCET with English as one of the languages and obtained a minimum of 45% (40% for SC / ST / OBC / PwD) marks in Physics and Mathematics along with Chemistry / Biotechnology / Biology / Electronics / Computer.
                     Students should be a citizen of India and domicile of Karnataka
                 </p>
@@ -130,7 +130,7 @@
         </div>
         <div class="col-md-12">
           <div class="col-md-12">
-            <div class="card m-2 bg-danger"  id="card-left">
+            <div class="card m-2 bg-primary"  id="card-left">
               <label  class="list-of-course-names">Eligible course</label>
                 <label  class="list-of-course-names">B.Sc Agriculture</label>
                 <label  class="list-of-course-names">B.Sc Horticulture</label>
@@ -144,7 +144,7 @@
               
                 <div class="card-body text-white">
                 <label class="mb-2">Perquisites</label>
-                <p class="text-justify text-white" id="paragraph-font">
+                <p class="text-justify text-white">
                   Students must have passed their class 12th or PUC examination or equivalent and students waiting for their result can also apply with Physics, Chemistry, Mathematics or Biology.
                   Students should be a citizen of India and domicile of Karnataka 
                 </p>
@@ -156,12 +156,12 @@
         </div>
         <div class="row">
           <div class="col-md-12">
-            <div class="card m-2 bg-danger"  id="card-left">
+            <div class="card m-2 bg-primary"  id="card-left">
               <label  class="list-of-course-names">Eligible course</label>
                 <label  class="list-of-course-names">BVSc & AH</label>
                 <div class="card-body text-white">
                 <label class="mb-2">Perquisites</label>
-                <p class="text-justify text-white" id="paragraph-font">
+                <p class="text-justify text-white">
                   Students must have passed their class 12th or PUC examination or equivalent and students waiting for their result can also apply with 50% (40% for SC / ST / OBC / PwD) marks in Physics, Chemistry, Biology and English.
                   Students should be a citizen of India and domicile of Karnataka 
                 </p>
@@ -173,19 +173,19 @@
         </div>
         <div class="row">
           <div class="col-md-12">
-            <div class="card m-2 bg-danger"  id="card-left">
+            <div class="card m-2 bg-primary"  id="card-left">
               <label  class="list-of-course-names">Eligible course</label>
                 <label  class="list-of-course-names">B.Pharma</label>
                 <div class="card-body text-white">
                 <label class="mb-2">Perquisites</label>
-                <p class="text-justify text-white" id="paragraph-font">
+                <p class="text-justify text-white" >
                   Students must have passed their class 12th or PUC examination or equivalent and students waiting for their result can also apply with 45% (40% for SC / ST / OBC / PwD) marks in Physics, Chemistry & Biology.
                   Passed Diploma in Pharmacy (Pharma D) exam from an institute/university approved by Pharmacy Council of India with a minimum of 45% (40% for SC / ST / OBC / PwD) marks.
                 </p>
-                <p class="text-justify text-white" id="paragraph-font">
+                <p class="text-justify text-white" >
                   Qualifying Pharma D is also applicable in case of lateral entry to the second year of B. Pharma.
                 </p>
-                <p class="text-justify text-white" id="paragraph-font">
+                <p class="text-justify text-white" >
                   Students should be a citizen of India and domicile of Karnataka 
                 </p>
                 <label class="list-of-course-names">Admission Criteria :</label>
@@ -196,16 +196,16 @@
         </div>
         <div class="row">
           <div class="col-md-12">
-            <div class="card m-2 bg-danger"  id="card-left">
+            <div class="card m-2 bg-primary"  id="card-left">
               <label  class="list-of-course-names">Eligible course</label>
                 <label  class="list-of-course-names">Pharma D</label>
                 <div class="card-body text-white">
                 <label class="mb-2">Perquisites</label>
-                <p class="text-justify text-white" id="paragraph-font">
+                <p class="text-justify text-white" >
                   Students must have passed their class 12th or PUC examination or equivalent and students waiting for their result can also apply with Physics, Chemistry, Mathematics or Biology.
                   Passed Diploma in Pharmacy (Pharma D) exam from an institute/university approved by Pharmacy Council of India.
                 </p>
-                <p class="text-justify text-white" id="paragraph-font">
+                <p class="text-justify text-white" >
                   Students should be a citizen of India and domicile of Karnataka 
                 </p>
                 <label class="list-of-course-names">Admission Criteria :</label>
@@ -216,15 +216,15 @@
         </div>
         <div class="row">
           <div class="col-md-12">
-            <div class="card m-2 bg-danger"  id="card-left">
+            <div class="card m-2 bg-primary"  id="card-left">
               <label  class="list-of-course-names">Eligible course</label>
                 <label  class="list-of-course-names">BArch</label>
                 <div class="card-body text-white">
                 <label class="mb-2">Perquisites</label>
-                <p class="text-justify text-white" id="paragraph-font">
+                <p class="text-justify text-white" >
                   Students must have passed their class 12th or PUC examination or equivalent and students waiting for their result can also apply with 50% (45% for SC / ST / OBC / PwD) marks in Physics, Chemistry and Mathematics.
                 </p>
-                <p class="text-justify text-white" id="paragraph-font">
+                <p class="text-justify text-white" >
                   Students should be a citizen of India and domicile of Karnataka 
                 </p>
                 <label class="list-of-course-names">Admission Criteria :</label>
@@ -235,15 +235,15 @@
         </div>
         <div class="row">
           <div class="col-md-12">
-            <div class="card m-2 bg-danger"  id="card-left">
+            <div class="card m-2 bg-primary"  id="card-left">
               <label  class="list-of-course-names">Eligible course</label>
                 <label  class="list-of-course-names">Naturopathy & Yoga</label>
                 <div class="card-body text-white">
                 <label class="mb-2">Perquisites</label>
-                <p class="text-justify text-white" id="paragraph-font">
+                <p class="text-justify text-white" >
                   Students must have passed their class 12th or PUC examination or equivalent and students waiting for their result can also apply with Physics, Chemistry and Biology as the major subjects.
                 </p>
-                <p class="text-justify text-white" id="paragraph-font">
+                <p class="text-justify text-white">
                   Students should be a citizen of India and domicile of Karnataka 
                 </p>
                 <label class="list-of-course-names">Admission Criteria :</label>
@@ -258,10 +258,10 @@
             <h3 id="tag-font" class="text-black text-center">Eligibility Clause</h3>
           </div>
           <div class="col-md-12 mt-2">
-            <div class="card border-danger mb-3" >
+            <div class="card border-primary mb-3" >
               <div class="card-body text-danger">
                 <label id="paragraph-font"> Code A : Eligibility Clause :</label>
-               <p class="card-text text-dark" id="paragraph-font">
+               <p class="card-text text-dark" >
                  The candidate should have studied and passed in one or more Government or Government recognised educational institutions located in the State of Karnataka for a minimum period of SEVEN academic years commencing from 1st standard to 2nd PUC / 12th standard as on 1st July of the year in which the Entrance Test is held and must have appeared and passed either SSLC / 10th standard or 2nd PUC / 12th standard examination from Karnataka State. In case of the candidate who had taken more than one year to pass a class or standard, the years of academic study is counted as one year only. 
               </p> 
                <label id="paragraph-font">Documents to be produced :</label><br/>
@@ -281,7 +281,7 @@
         </div>
         <div class="row">
           <div class="col-md-12 mt-2">
-            <div class="card border-danger mb-3" >
+            <div class="card border-primary mb-3" >
               <div class="card-body text-danger">
                 <label id="paragraph-font"> Code B : Eligibility Clause :</label>
                <p class="card-text text-dark" id="paragraph-font">
@@ -303,7 +303,7 @@
         </div>
         <div class="row">
           <div class="col-md-12 mt-2">
-            <div class="card border-danger mb-3" >
+            <div class="card border-primary mb-3" >
               <div class="card-body text-danger">
                 <label id="paragraph-font"> Code C : Eligibility Clause :</label>
                <p class="card-text text-dark" id="paragraph-font">
@@ -323,7 +323,7 @@
         </div>
         <div class="row">
           <div class="col-md-12 mt-2">
-            <div class="card border-danger mb-3" >
+            <div class="card border-primary mb-3" >
               <div class="card-body text-danger">
                 <label id="paragraph-font"> Code D : Eligibility Clause :</label>
                <p class="card-text text-dark" id="paragraph-font">
@@ -341,7 +341,7 @@
         </div>
         <div class="row">
           <div class="col-md-12 mt-2">
-            <div class="card border-danger mb-3" >
+            <div class="card border-primary mb-3" >
               <div class="card-body text-danger">
                 <label id="paragraph-font"> Code E : Eligibility Clause :</label>
                <p class="card-text text-dark" id="paragraph-font">
@@ -361,7 +361,7 @@
         </div>
         <div class="row">
           <div class="col-md-12 mt-2">
-            <div class="card border-danger mb-3" >
+            <div class="card border-primary mb-3" >
               <div class="card-body text-danger">
                 <label id="paragraph-font"> Code F : Eligibility Clause :</label>
                <p class="card-text text-dark" id="paragraph-font">
@@ -383,7 +383,7 @@
         </div>
         <div class="row">
           <div class="col-md-12 mt-2">
-            <div class="card border-danger mb-3" >
+            <div class="card border-primary mb-3" >
               <div class="card-body text-danger">
                 <label id="paragraph-font"> Code G : Eligibility Clause :</label>
                <p class="card-text text-dark" id="paragraph-font">
@@ -402,7 +402,7 @@
         </div>
         <div class="row">
           <div class="col-md-12 mt-2">
-            <div class="card border-danger mb-3" >
+            <div class="card border-primary mb-3" >
               <div class="card-body text-danger">
                 <label id="paragraph-font"> Code H : Eligibility Clause :</label>
                <p class="card-text text-dark" id="paragraph-font">
@@ -420,7 +420,7 @@
         </div>
         <div class="row">
           <div class="col-md-12 mt-2">
-            <div class="card border-danger mb-3" >
+            <div class="card border-primary mb-3" >
               <div class="card-body text-danger">
                 <label id="paragraph-font"> Code I : Eligibility Clause :</label>
                <p class="card-text text-dark" id="paragraph-font">
@@ -438,7 +438,7 @@
         </div>
         <div class="row">
           <div class="col-md-12 mt-2">
-            <div class="card border-danger mb-3" >
+            <div class="card border-primary mb-3" >
               <div class="card-body text-danger">
                 <label id="paragraph-font"> Code J : Eligibility Clause :</label>
                <p class="card-text text-dark" id="paragraph-font">
@@ -465,7 +465,7 @@
         </div>
         <div class="row">
           <div class="col-md-12 mt-2">
-            <div class="card border-danger mb-3" >
+            <div class="card border-primary mb-3" >
               <div class="card-body text-danger">
                 <label id="paragraph-font"> Code K : Eligibility Clause :</label>
                <p class="card-text text-dark" id="paragraph-font">
@@ -483,7 +483,7 @@
         </div>
         <div class="row">
           <div class="col-md-12 mt-2">
-            <div class="card border-danger mb-3" >
+            <div class="card border-primary mb-3" >
               <div class="card-body text-danger">
                 <label id="paragraph-font"> Code L : Eligibility Clause :</label>
                <p class="card-text text-dark" id="paragraph-font">
