--- a/master-of-education-course.html
+++ b/master-of-education-course.html
@@ -103,10 +103,10 @@
                     Master of Education or Master in Education is a professional postgraduate academic master’s degree course and is abbreviated as M.ED offered at universities and colleges. The duration of this course is 1 to 2 years. The duration of the course varies from institute to institute On the successful completion of coursework, the candidate will be honored with a degree of M.ED.
                 </p>
 
-                <p>
+                <p class="text-justify" id="paragraph-font">
                     Study in this course is purely based on an individual’s selection of stream in the Bachelor of Education program and based on that the individuals can specialize in that particular stream. Some popular specializations are Educational technology, Yoga Education and Teacher Education, etc.
                 </p>
-                <p>
+                <p class="text-justify" id="paragraph-font">
                     For M.ED candidates the ideal job opportunities are in the academic sector. They can work in private as well as government schools and colleges. The trend of private coaching and tuition centers is also on a hike in this modern era. Also, they can work in the capacity of an Education Consultant and Education Counselor. They can set up their own online tuition and coaching classes too.
                 </p>
                 <hr />
@@ -127,7 +127,7 @@
                     To be eligible for the Master of Education degree program, the candidate must acquire a Bachelor of Education degree program. A minimum of 50% marks in B.ED is considered for M.ED in most of the colleges.
                 </p>
 
-                <p>
+                <p class="text-justify" id="paragraph-font">
                     The admission procedure is based on the performance of students in their B.ED exams. Candidates are selected as per their merit basis. 
                 </p>
                
