--- a/college-blogs.html
+++ b/college-blogs.html
@@ -182,7 +182,7 @@
             </a>
           </div>
         </div>
-        <div class="col-md-4">
+        <!-- <div class="col-md-4">
           <div class="col max-mb-30 aos-init aos-animate" data-aos="fade-up">
             <a href="https://eduprov.com/btl-institute-of-technology.html" style="text-decoration: none;" class="icon-box text-center"
               data-bg-color="#fff" style="background-color: rgb(255, 255, 255)" data-abc="true">
@@ -197,7 +197,7 @@
               </div>
             </a>
           </div>
-        </div>
+        </div> -->
         <div class="col-md-4">
           <div class="col max-mb-30 aos-init aos-animate" data-aos="fade-up">
             <a href="https://eduprov.com/bms-college-of-engineering.html" style="text-decoration: none;" class="icon-box text-center"
