--- a/para-medical-course-blogs.html
+++ b/para-medical-course-blogs.html
@@ -212,13 +212,13 @@
         </div>
         <div class="col-md-4">
           <div class="col max-mb-30 aos-init aos-animate" data-aos="fade-up">
-            <a href="https://eduprov.com/bsc-forensic-course.html" style="text-decoration: none;" class="icon-box text-center"
+            <a href="https://eduprov.com/bsc-forensic-science-course.html" style="text-decoration: none;" class="icon-box text-center"
               data-bg-color="#fff" style="background-color: rgb(255, 255, 255)" data-abc="true">
               <div class="content">
                 <label class="title fz-20">B.Sc Forensic Medicine & Toxicology</label>
                 <div class="desc">
                   <p>
-                  pending keywords and des
+                    Bachelor of Science in Forensic Science or B.Sc. Forensic Science is a three-year undergraduate Forensic Science course that helps various departments. Forensic Science profession is a crime and laboratory-based profession. 
                   </p>
                 </div>
                 <span class="link">Read More <i class="fa fa-arrow-right"></i></span>
@@ -485,7 +485,7 @@
         </div>
         <div class="col-md-4">
             <div class="col max-mb-30 aos-init aos-animate" data-aos="fade-up">
-              <a href="https://eduprov.com/diploma-anaesthesia.html" style="text-decoration: none;" class="icon-box text-center" data-bg-color="#fff"
+              <a href="https://eduprov.com/diploma-anaesthesia-course.html" style="text-decoration: none;" class="icon-box text-center" data-bg-color="#fff"
                 style="background-color: rgb(255, 255, 255)" data-abc="true">
                 <div class="content">
                   <label class="title fz-20"> Diploma in Anaesthesia Technology </label>
