--- a/bsc-antropology-course.html
+++ b/bsc-antropology-course.html
@@ -8,8 +8,33 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>B.Sc Anthropology Admission Guidance in Bangalore</title>
   <script type="application/ld+json">
-  
-  </script>
+    {
+      "@context": "https://schema.org",
+      "@type": "BlogPosting",
+      "mainEntityOfPage": {
+        "@type": "WebPage",
+        "@id": "https://eduprov.com/bsc-antropology-course.html"
+      },
+      "headline": "B.Sc Anthropology Admission Guidance in Bangalore",
+      "description": "Bachelor of Science in Anthropology is a three years long undergraduate degree that is highly in demand, interesting and helps you reach out to people and learn. This course is mainly targeted towards those students who are interested in studying",
+      "image": "https://eduprov.com/images/favicon.png",  
+      "author": {
+        "@type": "Person",
+        "name": "thephotogenicbug",
+        "url": "https://thephotogenicbug.in/"
+      },  
+      "publisher": {
+        "@type": "Organization",
+        "name": "Eduprov",
+        "logo": {
+          "@type": "ImageObject",
+          "url": "https://eduprov.com/images/favicon.png"
+        }
+      },
+      "datePublished": "2021-08-26",
+      "dateModified": "2021-08-26"
+    }
+    </script>
   <meta name="description" content="Bachelor of Science in Anthropology is a three years long undergraduate degree that is highly in demand, interesting and helps you reach out to people and learn. This course is mainly targeted towards those students who are interested in studying">
   <meta name="keywords" content=" bsc anthropology,b sc anthropology,bsc anthropology syllabus,bsc hons anthropology,bsc anthropology du,bsc anthropology subjects,bsc anthropology course details,anthropology syllabus for bsc,anthropology bsc syllabus,b sc anthropology admission,
 
@@ -55,13 +80,15 @@
       <div class="line"></div>
     </div>
     <ul class="nav-links">
-      <li class="text-white" style="font-weight: bold;"><a href="https://eduprov.com/">Home</a></li>
-      <li style="font-weight: bold;"><a href="https://eduprov.com/application-form.php">Application Form</a></li>
-      <li style="font-weight: bold;"><a href="#">Contact us</a></li>
+      <li><a href="https://eduprov.com/">Home</a></li>
+      <li><a href="https://eduprov.com/admission-guidance.html">Admission Guidance</a></li>
+      <li><a href="https://eduprov.com/career-counseling.html">Career Counseling</a></li>
+      <li><a href="https://eduprov.com/application-form.php">Application Form</a></li>
+      <li><a href="https://eduprov.com/contact-form.php">Contact Us</a></li>
     </ul>
   </nav>
   <div id="logo">
-    <img src="images/logo-white.png" alt="Edu-logo" />
+    <a href="https://eduprov.com/"><img src="images/logo-white.png" alt="Edu-logo" title="eduprov logo" /></a>
   </div>
   <div class="container text-white">
       
